# Audioglobber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: .gitattributes  decoder.cpp  decoder.hpp  main.cpp  miniaudio.h  sound.cpp  sound.hpp
src/gui/: filemanager.cpp  gui.cpp  gui.hpp  icons.cpp
src/gui/icons/: open.h  play.h  save.h  stop.h
